--- a/htdocs/projects/ia64.html
+++ b/htdocs/projects/ia64.html
@@ -10,9 +10,9 @@
 <h2><a name="toc">Contents:</a></h2>
 
 <ul>
-<li><a href="#short_term_projects">Short-term projects</a>
-<li><a href="#long_term_projects">Long-term and infrastructure projects</a>
-<li><a href="#tool_projects"> Tools: performance tools, benchmarks, etc.</a>
+<li><a href="#short_term_projects">Short-term projects</a></li>
+<li><a href="#long_term_projects">Long-term and infrastructure projects</a></li>
+<li><a href="#tool_projects"> Tools: performance tools, benchmarks, etc.</a></li>
 </ul>
 <!-- table of contents end -->
 
@@ -43,7 +43,7 @@ alias analysis in GCC during scheduling is extremely weak; it can even
 lose track of which addresses are supposed to come from the stack frame.
 It's weak in general and is even weaker in IA-64.  Alias analysis is a
 general infrastructure problem; GCC has no knowledge of cross-block
-scheduling.
+scheduling.</p>
 
 <p>Since then, Richard Kenner has checked in several patches to track
 memory origins.  His changes link each MEM to the declaration it's from
@@ -131,7 +131,7 @@ work with the AST optimizations would be good for IA-64.
 <p>Code locality is even more important for this architecture than for
 others where it shows a benefit.</p>
 
-There is an article by Carl Pettis and Bob Hansen about how to order
+<p>There is an article by Carl Pettis and Bob Hansen about how to order
 functions based on a call graph: "Profile guided code positioning",
 http://acm.proxy.nova.edu/pubs/articles/proceedings/pldi/93542/p16-pettis/p16-pettis.pdf.</p>
 
@@ -150,7 +150,7 @@ This is described in
 Profile Driven Optimizations</a>, which also lists items for future work.</p>
 
 <p>The following items came out of the June 2001 summit as issues to
-investigate:
+investigate:</p>
 <ul>
 <li>GCC does not split a function into multiple regions, although that
 has been mentioned as a possibility.</li>
@@ -158,7 +158,6 @@ has been mentioned as a possibility.</li>
 and for if-conversion to decide which side of the branch should be
 predicated.  It could also be used for delay slots.</li>
 </ul>
-</p>
 </li>
 
 <li>Code locality: static function ordering
@@ -204,7 +203,7 @@ viable.</p>
 <p>Turning off the current support actually makes faster code for IA-64,
 since it tends to create extra dependencies.  For it to be used effectively
 post-increment could be generated after the second scheduling pass, with a
-third pass then required.
+third pass then required.</p>
 
 <p>Post-increment could be used when optimizing for size.</p>
 
@@ -276,14 +275,12 @@ when predicated code is present.  None of the optimization passes up to
 and including register allocation know how to handle predication from a
 correctness standpoint.</p>
 
-<p>
 <ul>
 <li>if-conversion</li>
 <li>finding longer strings of logical</li>
 <li>PQS (Predicate Query System)</li>
 <li>disjoint predicates</li>
 </ul>
-</p>
 <p>PQS is a database of known relationships between predicates.  It would
 underlie predicate-aware dataflow, and therefore dependence drawing and
 register allocation.</p>
@@ -387,7 +384,6 @@ identified as being important.</p>
 performed by separate teams to best utilize the experience and strengths
 of each team.</p>
 
-<p>
 <ul>
 <li>Determine which benchmarks most accurately reflect the performance of
 Linux system software and the enterprise applications that are most
@@ -403,7 +399,6 @@ most improve the performance of GCC code.</li>
 <li>Pass on information to GCC developers about the relative value of
 various short-term and long-term optimizations.</li>
 </ul>
-</p>
 </li>
 
 <li>Benchmark specific optimizations
