--- a/htdocs/projects/optimize.html
+++ b/htdocs/projects/optimize.html
@@ -2,7 +2,7 @@
 
 <head>
 <title>Optimizer deficiencies</title>
-<link rev="made" href="mailto:zackw@panix.com">
+<link rev="made" href="mailto:zackw@panix.com" />
 </head>
 
 <body>
@@ -30,7 +30,7 @@ turn it back on.)</p>
 <li><a href="#condition">Suboptimal code for complex conditionals</a></li>
 </ol>
 
-<hr>
+<hr />
 <h2><a name="csefail">Failure of common subexpression elimination</a></h2>
 
 <p>(25 Aug 2001) Common subexpression elimination cannot merge
@@ -131,7 +131,7 @@ However, we know that can't happen here, because <code>(reg:QI
 <code>zero_extend</code>.  If it were negative, we would have jumped
 to <code>.L1</code>.</p>
 
-<hr>
+<hr />
 <h2><a name="storemerge">Store merging</a></h2>
 
 <p>(14 Jan 2000) GCC frequently generates multiple narrow writes to
@@ -207,7 +207,7 @@ a more general function where the values assigned to
 <code>'code'</code> and <code>'mode'</code> were not constant, but the
 advantage is less obvious here.</p>
 
-<hr>
+<hr />
 <h2><a name="volatile">Volatile inhibits too many optimizations</a></h2>
 
 <p>(17 Jan 2000) gcc refuses to perform in-memory operations on
@@ -247,7 +247,7 @@ functions above have identical semantics.  On other platforms that
 have in-memory operations, that may not be the case, and the C
 standard may take issue with the difference - we aren't sure.</p>
 
-<hr>
+<hr />
 <h2><a name="rndmode">Unnecessary changes of rounding mode</a></h2>
 
 <p>(25 Aug 2001) gcc does not remember the state of the floating point
@@ -354,7 +354,7 @@ d2i2:
 	ret
 </pre>
 
-<hr>
+<hr />
 <h2><a name="fpmove">Moving floating point through integer registers</a></h2>
 
 <p>(22 Jan 2000) GCC knows how to move <code>float</code> quantities
@@ -490,7 +490,7 @@ two blocks of four megabytes each, averaged over a hundred runs.</p>
 <tr><td>fcpy3</td>   <td></td>         <td></td>           <td>2.860</td> <td>72.37</td></tr>
 </table>
 
-<hr>
+<hr />
 <h2><a name="pathetic-loop">More pathetic failures of loop
 optimization</a></h2>
 
@@ -669,7 +669,7 @@ loop, and never modified again except inside an if block that will
 only be executed if it's nonzero.  Therefore, that if block is dead
 code, and should have been deleted.</p>
 
-<hr>
+<hr />
 <h2><a name="condition">Suboptimal code for complex conditionals</a></h2>
 
 <p>(25 Aug 2001) gcc is less clever about compound conditionals than
