--- a/htdocs/projects/prefetch.html
+++ b/htdocs/projects/prefetch.html
@@ -1,10 +1,10 @@
 <html>
-<body>
 
 <head>
 <title>Data Prefetch Support</title>
 </head>
 
+<body>
 <h1>Data Prefetch Support</h1>
 
 <h2><a name="toc">Contents</a></h2>
@@ -52,7 +52,7 @@ originally gathered as input for determining the operands to GCC's
 <code>prefetch</code> RTL pattern, but might continue to be useful
 to those adding new prefetch optimizations.</p>
 
-<p>Existing data prefetch support in GCC includes:
+<p>Existing data prefetch support in GCC includes:</p>
 <ul>
 <li>A generic prefetch RTL pattern.</li>
 <li>Target-specific support for several targets.</li>
@@ -63,7 +63,7 @@ which prefetch support has not yet been added to GCC.</li>
 prefetches arrays used in loops.</li>
 </ul>
 
-<p>Possibilities for future work include:
+<p>Possibilities for future work include:</p>
 <ul>
 <li>Greedy prefetch [<a href="#ref_22">22</a>] of data referenced by pointer
 variables, controlled by an option like <code>-fprefetch-pointers</code>.
@@ -78,7 +78,7 @@ prefetch optimization heuristics.</li>
 
 <p>This document is a work in progress.  Please copy any comments about
 it to <a href="mailto:janis187@us.ibm.com">Janis Johnson,
-&lt;janis187@us.ibm.com&gt;</a>.
+&lt;janis187@us.ibm.com&gt;</a>.</p>
 
 <h2><a name="elements">Elements of Data Prefetch Support</a></h2>
 
@@ -104,6 +104,7 @@ prefetched so it will continue to be readily accessible.
 Accesses to data with no temporal locality are <em>transient</em>; the data
 is unlikely to be accessed multiple times and, if possible, should not be
 left in a cache where it would displace other data that might be needed soon.
+</p>
 
 <p>Some data prefetch instructions allow specifying in which level of
 the cache the data should be left.</p>
@@ -319,7 +320,7 @@ fetched line is implementation dependent, but at least 32 bytes.</p>
 <p>The Athlon processor supports <code>PREFETCHW</code>, but the K6-2 and
 K6-III processors treat it the same as <code>PREFETCH</code>.
 Future AMD K86 processors might extend the <code>PREFETCH</code>
-instruction format.<p>
+instruction format.</p>
 
 <h3><a name="alpha">Alpha</a></h3>
 
@@ -446,7 +447,7 @@ of a loop processing array elements.</p>
 (Store Vector Indexed LRU), which indicate that an access
 is likely to be the final one to a cache block and that the address
 should be treated as least recently used, to allow other data to
-replace it in the cache.
+replace it in the cache.</p>
 
 <p>The differences between AltiVec's cache control instructions and 
 The PowerPC instructions <code>dcbt</code> and <code>dcbtst</code> are
@@ -498,7 +499,7 @@ line prefetched is implementation dependent, but a minimum of 32 bytes.</p>
 
 <h3><a name="ia64">IA-64</a></h3>
 
-The <code>lfetch</code> (Line Prefetch) instruction has versions for
+<p>The <code>lfetch</code> (Line Prefetch) instruction has versions for
 read and write prefetches, and an optional modifier to specify the
 locality of the memory access and the cache level to which the data
 would best be allocated [<a href="#ref_8">8</a>].</p>
@@ -583,7 +584,7 @@ The "retained" versions place the data in the cache so that it will not
 be displaced by data prefetched as "streamed."</p>
 
 <p>The prefetch moves a block of data into the cache.  The size is
-implementation specific.
+implementation specific.</p>
 
 <p>There are no alignment restrictions.</p>
 
@@ -797,24 +798,24 @@ http://developer.intel.com/design/itanium/manuals/index.htm</a>.</p>
 <em>MIPS32[tm] Architecture for Programmers; Volume II: The MIPS32[tm]
 Instruction Set</em>, MIPS Technologies, Document Number MD00086,
 Revision 0.95, March 12, 2001;
-search from <a href="http://www.mips.com">http://www.mips.com</a>.<p>
+search from <a href="http://www.mips.com">http://www.mips.com</a>.</p>
 
 <p><a name="ref_10">[10]</a>
 <em>MIPS64[tm] Architecture for Programmers; Volume II: The MIPS64[tm]
 Instruction Set</em>, MIPS Technologies, Document Number MD00087,
 Revision 0.95, March 12, 2001;
-search from <a href="http://www.mips.com">http://www.mips.com</a>.<p>
+search from <a href="http://www.mips.com">http://www.mips.com</a>.</p>
 
 <p><a name="ref_11">[11]</a>
 <em>MMIX Op Codes</em>, Don Knuth;
 <a href="http://www-cs-faculty.stanford.edu/~knuth/mmop.html">
-http://www-cs-faculty.stanford.edu/~knuth/mmop.html</a>.<p>
+http://www-cs-faculty.stanford.edu/~knuth/mmop.html</a>.</p>
 
 <p><a name="ref_12">[12]</a>
 <em>The Art of Computer Programming, Fascicle 1: MMIX</em>, Don Knuth,
 Addison Wesley Longman, 2001;
 <a href="http://www-cs-faculty.stanford.edu/~knuth/fasc1.ps.gz">
-http://www-cs-faculty.stanford.edu/~knuth/fasc1.ps.gz</a>.<p>
+http://www-cs-faculty.stanford.edu/~knuth/fasc1.ps.gz</a>.</p>
 
 <p><a name="ref_13">[13]</a>
 <em>PA-RISC 2.0 Instruction Set Architecture</em>,
